yaml-deployment/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: furniture
  labels:
    name: furniture
    environment: production
