yaml-deployment/08-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: furniture-backend
  namespace: furniture
spec:
  replicas: 2
  selector:
    matchLabels:
      app: furniture-backend
  template:
    metadata:
      labels:
        app: furniture-backend
    spec:
      containers:
        - name: furniture-backend
          image: shivsaini23/e-commerce:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
