yaml-deployment/10-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: furniture-frontend
  namespace: furniture
spec:
  replicas: 2
  selector:
    matchLabels:
      app: furniture-frontend
  template:
    metadata:
      labels:
        app: furniture-frontend
    spec:
      containers:
        - name: furniture-frontend
          image: shivsaini23/ecommerce-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 15
            periodSeconds: 15
