yaml-deployment/09-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: furniture-service
  namespace: furniture
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: furniture-backend
